--- a/principal/index.html
+++ b/principal/index.html
@@ -8,20 +8,22 @@
     <title>Sailor Moon</title>
 </head>
 <body>
-    <header>
-        <h1>Sailor Moon</h1>
-        <p>Sailor Moon conta a história de Usagi Tsukino, uma garota de 14 anos que um dia encontra Luna, uma gata falante que revela a identidade de Usagi como "Sailor Moon", uma guerreira mágica destinada a salvar a Terra das forças do mal.</p>
-    </header>
-        <nav>
+    <header id="header">
+        <div id="header-div">
+        <h1 id="tittle">Sailor Moon</h1>
+        <p id="header-text">Sailor Moon conta a história de Usagi Tsukino, uma garota de 14 anos que um dia encontra Luna, uma gata falante que revela a identidade de Usagi como "Sailor Moon", uma guerreira mágica destinada a salvar a Terra das forças do mal.</p>
+        <nav id="menu">
             <ul id="header-list">
-                <li><a href="index.html" target="_self">Home</a>
-                <li><a href="../secundaria/personagens.html" target="_self">Personagens</a>
-                <li><a href="../secundaria/curiosidades.html" target="_self">Curiosidades</a>
-                <li><a href="mailto:mluisasilv4@gmail.com?subject=Olá, desejo falar a respeito da página sailor moon" target="_self">Fale Conosco</a>
+                <li><a href="index.html" target="_self" class="link">Home</a>
+                <li><a href="../secundaria/personagens.html" target="_self" class="link">Personagens</a>
+                <li><a href="../secundaria/curiosidades.html" target="_self" class="link">Curiosidades</a>
+                <li><a href="mailto:mluisasilv4@gmail.com?subject=Olá, desejo falar a respeito da página sailor moon" target="_self" class="link">Fale Conosco</a>
             </ul>
         </nav>
+        </div>
+        </header>
     <main>
-        <article>
+        <article id="primary-content">
         <h2>Sinopse</h2>
         <p>Sailor Moon conta a história de Usagi Tsukino, uma garota normal e inocente de 14 anos — pelo menos, é isso que ela pensa — que um dia encontra Luna, uma gata falante que revela a identidade de Usagi como "Sailor Moon", uma guerreira mágica destinada a salvar a Terra das forças do mal. <a href="https://sailormoon.fandom.com/pt-br/wiki/Luna" target="_blank">Luna</a>🔗, então, dá a ela tarefas, como a de encontrar a Princesa da Lua e a de proteger a Terra de diversos antagonistas, começando com o <a href="https://en.wikipedia.org/wiki/Dark_Kingdom" target="_blank">Dark Kingdom (Reino Sombrio)</a>🔗, que há um tempo destruiu o Reino da Lua, o <a href="https://sailormoon.fandom.com/pt-br/wiki/Milênio_de_Prata" target="_blank">Silver Millenium (Milênio de Prata)</a>🔗. Antes da série começar, o inimigo atacou o Reino da Lua, o que obrigou a Rainha Serenity a mandar sua filha, a Princesa Serenity e suas guardiãs, além dos gatos Luna e Artemis, seus assessores e o Príncipe do Reino da Terra, Endymion para o futuro para renascerem. Junto com suas guardiãs — a inteligente Sailor Mercury, a vidente Sailor Mars, a delicada, porém forte Sailor Jupiter e a alegre Sailor Venus — a Princesa Serenity luta contra o mal e, com o tempo, encontra-se com o Tuxedo Mask (Tuxedo Kamen no original), o seu verdadeiro amor</p>
         <picture class="image">
@@ -90,8 +92,8 @@
             </div>
         </article>
     </main>
-    <footer>
-        <p>Site criado por <a href="https://www.linkedin.com/in/luísa-silva-a79842269/" target="_blank">Luísa Silva</a> para o CursoemVídeo.</p>
+    <footer id="footer">
+        <p id="footer-text">Site criado por <a href="https://www.linkedin.com/in/luísa-silva-a79842269/" target="_blank" id="footer-link">Luísa Silva</a> para o CursoemVídeo.</p>
     </footer>
 </body>
 </html>
