--- a/principal/index.html
+++ b/principal/index.html
@@ -41,8 +41,8 @@
             <p class="text">Em 6 de julho de 2012, no evento de celebração do 20º aniversário de Sailor Moon, Naoko Takeuchi, Kodansha e o grupo Momoiro Clover Z anunciaram que uma nova adaptação em anime estava sendo produzida e estava programada para começar a ser transmitida no verão de 2013, em um lançamento mundial simultâneo, Sailor Moon Crystal, como foi chamado, segue a história do mangá tão fielmente quanto possível, com cada episódio correspondendo a um capítulo publicado. Enquanto Kotono Mitsuishi reprisa seu papel como Usagi Tsukino, um novo elenco de atrizes de voz foram escolhidas para as quatro Sailor Senshi. A dubladora da Ami Mizuno é Hisako Kanemoto, Rei Hino é dublada por Rina Sato, Makoto Kino por Ami Koshimizu e Minako Aino é dublada por Shizuka Ito.Em 30 de abril, foi revelado que o novo anime teria 26 episódios.O primeiro trailer foi divulgado no dia 5 de junho de 2014, revelando que Ryō Hirohashi dublaria a gata Luna e Kenji Nojima, Tuxedo Mask.</p>
                 <picture class="image">
                     <source media="(max-width:800px )" srcset="../imagens/secundaria-500.jpg">
-                    <source media="(max-width: 1000px)" srcset="../imagens/secundaria-800.jpg">
-                    <img src="../imagens/secundaria-1080.jpg" alt="Sailors">
+                    <source media="(max-width: 1000px)" srcset="../imagens/secundaria-600.jpg">
+                    <img src="../imagens/secundaria-700.jpg" alt="Sailors">
                 </picture>
             <p class="text">assim como Serena e as outras Sailors, os gatos são reencarnações de guerreiras mágicas da lua, ambas as criaturas tem muito a revelar.</p>
                 <picture class="image">
