--- a/principal/index.html
+++ b/principal/index.html
@@ -24,7 +24,7 @@
         </header>
     <main>
         <article id="primary-content">
-        <h2 id="main-title">Sinopse do anime</h2>
+        <h2 id="main-title">Sinopse (Anime)</h2>
         <p class="text">Sailor Moon conta a história de Usagi Tsukino, uma garota normal e inocente de 14 anos — pelo menos, é isso que ela pensa — que um dia encontra Luna, uma gata falante que revela a identidade de Usagi como "Sailor Moon", uma guerreira mágica destinada a salvar a Terra das forças do mal. <a href="https://sailormoon.fandom.com/pt-br/wiki/Luna" target="_blank" class="article-links">Luna</a>🔗, então, dá a ela tarefas, como a de encontrar a Princesa da Lua e a de proteger a Terra de diversos antagonistas, começando com o <a href="https://en.wikipedia.org/wiki/Dark_Kingdom" target="_blank" class="article-links">Dark Kingdom (Reino Sombrio)</a>🔗, que há um tempo destruiu o Reino da Lua, o <a href="https://sailormoon.fandom.com/pt-br/wiki/Milênio_de_Prata" target="_blank" class="article-links">Silver Millenium (Milênio de Prata)</a>🔗. Antes da série começar, o inimigo atacou o Reino da Lua, o que obrigou a Rainha Serenity a mandar sua filha, a Princesa Serenity e suas guardiãs, além dos gatos Luna e Artemis, seus assessores e o Príncipe do Reino da Terra, Endymion para o futuro para renascerem. Junto com suas guardiãs — a inteligente Sailor Mercury, a vidente Sailor Mars, a delicada, porém forte Sailor Jupiter e a alegre Sailor Venus — a Princesa Serenity luta contra o mal e, com o tempo, encontra-se com o Tuxedo Mask (Tuxedo Kamen no original), o seu verdadeiro amor</p>
         <picture class="image">
             <source media="(max-width: 300px)" srcset="..//imagens/sailors-350.png">
