--- a/principal/index.html
+++ b/principal/index.html
@@ -27,20 +27,25 @@
         <h2 id="main-title">Sinopse (Anime)</h2>
         <p class="text">Sailor Moon conta a história de Usagi Tsukino, uma garota normal e inocente de 14 anos — pelo menos, é isso que ela pensa — que um dia encontra Luna, uma gata falante que revela a identidade de Usagi como "Sailor Moon", uma guerreira mágica destinada a salvar a Terra das forças do mal. <a href="https://sailormoon.fandom.com/pt-br/wiki/Luna" target="_blank" class="article-links">Luna</a>🔗, então, dá a ela tarefas, como a de encontrar a Princesa da Lua e a de proteger a Terra de diversos antagonistas, começando com o <a href="https://en.wikipedia.org/wiki/Dark_Kingdom" target="_blank" class="article-links">Dark Kingdom (Reino Sombrio)</a>🔗, que há um tempo destruiu o Reino da Lua, o <a href="https://sailormoon.fandom.com/pt-br/wiki/Milênio_de_Prata" target="_blank" class="article-links">Silver Millenium (Milênio de Prata)</a>🔗. Antes da série começar, o inimigo atacou o Reino da Lua, o que obrigou a Rainha Serenity a mandar sua filha, a Princesa Serenity e suas guardiãs, além dos gatos Luna e Artemis, seus assessores e o Príncipe do Reino da Terra, Endymion para o futuro para renascerem. Junto com suas guardiãs — a inteligente Sailor Mercury, a vidente Sailor Mars, a delicada, porém forte Sailor Jupiter e a alegre Sailor Venus — a Princesa Serenity luta contra o mal e, com o tempo, encontra-se com o Tuxedo Mask (Tuxedo Kamen no original), o seu verdadeiro amor</p>
         <picture class="image">
-            <source media="(max-width: 300px)" srcset="..//imagens/sailors-350.png">
-            <source media="(max-width: 800px)" srcset="..//imagens/sailors-500.png">
+            <source media="(max-width: 800px)" srcset="..//imagens/sailors-350.png">
             <img src="../imagens/sailors-original.png" alt="Colagem personagens sailors">
         </picture>
         <h2 class="article-title">Mangá</h2>
         <p class="text">Escrito e ilustrado por <a href="https://pt.wikipedia.org/wiki/Naoko_Takeuchi" target="_blank" class="article-links">Naoko Takeuchi</a>🔗, Sailor Moon contém 52 capítulos (60 na edição revisada), conhecidos como Atos, e dez histórias paralelas. Foi lançada como uma série na revista mensal de mangá Nakayoshi da Kodansha entre fevereiro de 1992 e março de 1997; as histórias paralelas apareceram simultaneamente em outra revista de mangá da mesma editora, na chamada RunRun.Kodansha publicou todos os capítulos e as histórias paralelas em forma de <a href="https://pt.wikipedia.org/wiki/Tankōbon" target="_blank" class="article-links">Tankōbon</a>🔗. A primeira edição de colecionador do mangá foi publicada entre 1992 e 1997 e consiste em 18 volumes com todos os capítulos e histórias paralelas em ordem de lançamento. Até o final de 1995, os treze volumes de Sailor Moon tinham vendido um milhão de cópias cada e o Japão exportou o mangá para mais de 23 países, incluindo China, México, Austrália, a maior parte da Europa e América do Norte.</p>
+        <div id="img-container">
         <picture>
-            <img src="../imagens/sailor-moon-500.jpg" alt="Sailor Moon Logo">
+            <source media="(max-width: 300px)" srcset="../imagens/sailor-moon-200.png">
+            <img src="../imagens/sailor-moon-400.png" alt="Sailor Moon">
         </picture>
+        <picture>
+            <img src="../imagens/sailor-invert-400.png" alt="Sailor Sun">
+        </picture>
+        </div>
         <p class="text"> O mangá também possui uma segunda edição de colecionador, chamado shinsōban (também conhecida como "Deluxe"), durante a exibição da série live-action foi renomeado para Pretty Guardian Sailor Moon. Em novembro de 2013, como comemoração do 20º aniversário do mangá foi lançada a terceira edição de colecionador, chamada de kazenban (edição "Perfeita".)</p>
             <h2 class="article-title">Surge um novo mascote</h2>
             <p class="text">Em 6 de julho de 2012, no evento de celebração do 20º aniversário de Sailor Moon, Naoko Takeuchi, Kodansha e o grupo Momoiro Clover Z anunciaram que uma nova adaptação em anime estava sendo produzida e estava programada para começar a ser transmitida no verão de 2013, em um lançamento mundial simultâneo, Sailor Moon Crystal, como foi chamado, segue a história do mangá tão fielmente quanto possível, com cada episódio correspondendo a um capítulo publicado. Enquanto Kotono Mitsuishi reprisa seu papel como Usagi Tsukino, um novo elenco de atrizes de voz foram escolhidas para as quatro Sailor Senshi. A dubladora da Ami Mizuno é Hisako Kanemoto, Rei Hino é dublada por Rina Sato, Makoto Kino por Ami Koshimizu e Minako Aino é dublada por Shizuka Ito.Em 30 de abril, foi revelado que o novo anime teria 26 episódios.O primeiro trailer foi divulgado no dia 5 de junho de 2014, revelando que Ryō Hirohashi dublaria a gata Luna e Kenji Nojima, Tuxedo Mask.</p>
                 <picture class="image">
-                    <source media="(max-width:800px )" srcset="../imagens/secundaria-500.jpg">
+                    <source media="(max-width:800px )" srcset="../imagens/secundaria-300.jpg">
                     <source media="(max-width: 1000px)" srcset="../imagens/secundaria-600.jpg">
                     <img src="../imagens/secundaria-700.jpg" alt="Sailors">
                 </picture>
