--- a/principal/index.html
+++ b/principal/index.html
@@ -25,13 +25,14 @@
     <main>
         <article id="primary-content">
         <h2 id="main-title">Sinopse (Anime)</h2>
-        <p class="text">Sailor Moon conta a história de Usagi Tsukino, uma garota normal e inocente de 14 anos — pelo menos, é isso que ela pensa — que um dia encontra Luna, uma gata falante que revela a identidade de Usagi como "Sailor Moon", uma guerreira mágica destinada a salvar a Terra das forças do mal. <a href="https://sailormoon.fandom.com/pt-br/wiki/Luna" target="_blank" class="article-links">Luna</a>🔗, então, dá a ela tarefas, como a de encontrar a Princesa da Lua e a de proteger a Terra de diversos antagonistas, começando com o <a href="https://en.wikipedia.org/wiki/Dark_Kingdom" target="_blank" class="article-links">Dark Kingdom (Reino Sombrio)</a>🔗, que há um tempo destruiu o Reino da Lua, o <a href="https://sailormoon.fandom.com/pt-br/wiki/Milênio_de_Prata" target="_blank" class="article-links">Silver Millenium (Milênio de Prata)</a>🔗. Antes da série começar, o inimigo atacou o Reino da Lua, o que obrigou a Rainha Serenity a mandar sua filha, a Princesa Serenity e suas guardiãs, além dos gatos Luna e Artemis, seus assessores e o Príncipe do Reino da Terra, Endymion para o futuro para renascerem. Junto com suas guardiãs — a inteligente Sailor Mercury, a vidente Sailor Mars, a delicada, porém forte Sailor Jupiter e a alegre Sailor Venus — a Princesa Serenity luta contra o mal e, com o tempo, encontra-se com o Tuxedo Mask (Tuxedo Kamen no original), o seu verdadeiro amor</p>
+        <p class="text">Sailor Moon conta a história de Usagi Tsukino, uma garota normal e inocente de 14 anos — pelo menos, é isso que ela pensa — que um dia encontra Luna, uma gata falante que revela a identidade de Usagi como "Sailor Moon", uma guerreira mágica destinada a salvar a Terra das forças do mal. <a href="https://sailormoon.fandom.com/pt-br/wiki/Luna" target="_blank" class="article-links">Luna</a>🔗, então, dá a ela tarefas, como a de encontrar a Princesa da Lua e a de proteger a Terra de diversos antagonistas, começando com o <a href="https://en.wikipedia.org/wiki/Dark_Kingdom" target="_blank" class="article-links">Dark Kingdom (Reino Sombrio)</a>🔗, que há um tempo destruiu o Reino da Lua, o <a href="https://sailormoon.fandom.com/pt-br/wiki/Milênio_de_Prata" target="_blank" class="article-links">Silver Millenium (Milênio de Prata)</a>🔗.</p>
+        <p class="text">Antes da série começar, o inimigo atacou o Reino da Lua, o que obrigou a Rainha Serenity a mandar sua filha, a Princesa Serenity e suas guardiãs, além dos gatos Luna e Artemis, seus assessores e o Príncipe do Reino da Terra, Endymion para o futuro para renascerem. Junto com suas guardiãs — a inteligente Sailor Mercury, a vidente Sailor Mars, a delicada, porém forte Sailor Jupiter e a alegre Sailor Venus — a Princesa Serenity luta contra o mal e, com o tempo, encontra-se com o Tuxedo Mask (Tuxedo Kamen no original), o seu verdadeiro amor</p>
         <picture class="image">
             <source media="(max-width: 800px)" srcset="..//imagens/sailors-350.png">
             <img src="../imagens/sailors-original.png" alt="Colagem personagens sailors">
         </picture>
         <h2 class="article-title">Mangá</h2>
-        <p class="text">Escrito e ilustrado por <a href="https://pt.wikipedia.org/wiki/Naoko_Takeuchi" target="_blank" class="article-links">Naoko Takeuchi</a>🔗, Sailor Moon contém 52 capítulos (60 na edição revisada), conhecidos como Atos, e dez histórias paralelas. Foi lançada como uma série na revista mensal de mangá Nakayoshi da Kodansha entre fevereiro de 1992 e março de 1997; as histórias paralelas apareceram simultaneamente em outra revista de mangá da mesma editora, na chamada RunRun.Kodansha publicou todos os capítulos e as histórias paralelas em forma de <a href="https://pt.wikipedia.org/wiki/Tankōbon" target="_blank" class="article-links">Tankōbon</a>🔗. A primeira edição de colecionador do mangá foi publicada entre 1992 e 1997 e consiste em 18 volumes com todos os capítulos e histórias paralelas em ordem de lançamento. Até o final de 1995, os treze volumes de Sailor Moon tinham vendido um milhão de cópias cada e o Japão exportou o mangá para mais de 23 países, incluindo China, México, Austrália, a maior parte da Europa e América do Norte.</p>
+        <p class="text">Escrito e ilustrado por <a href="https://pt.wikipedia.org/wiki/Naoko_Takeuchi" target="_blank" class="article-links">Naoko Takeuchi</a>🔗, Sailor Moon contém 52 capítulos (60 na edição revisada), conhecidos como Atos, e dez histórias paralelas. Foi lançada como uma série na revista mensal de mangá Nakayoshi da Kodansha entre fevereiro de 1992 e março de 1997; as histórias paralelas apareceram simultaneamente em outra revista de mangá da mesma editora, na chamada RunRun.Kodansha publicou todos os capítulos e as histórias paralelas em forma de <a href="https://pt.wikipedia.org/wiki/Tankōbon" target="_blank" class="article-links">Tankōbon</a>🔗.</p><p class="text"> A primeira edição de colecionador do mangá foi publicada entre 1992 e 1997 e consiste em 18 volumes com todos os capítulos e histórias paralelas em ordem de lançamento. Até o final de 1995, os treze volumes de Sailor Moon tinham vendido um milhão de cópias cada e o Japão exportou o mangá para mais de 23 países, incluindo China, México, Austrália, a maior parte da Europa e América do Norte.</p>
         <div id="img-container">
         <picture>
             <source media="(max-width: 300px)" srcset="../imagens/sailor-moon-200.png">
@@ -43,7 +44,8 @@
         </div>
         <p class="text"> O mangá também possui uma segunda edição de colecionador, chamado shinsōban (também conhecida como "Deluxe"), durante a exibição da série live-action foi renomeado para Pretty Guardian Sailor Moon. Em novembro de 2013, como comemoração do 20º aniversário do mangá foi lançada a terceira edição de colecionador, chamada de kazenban (edição "Perfeita".)</p>
             <h2 class="article-title">Surge um novo mascote</h2>
-            <p class="text">Em 6 de julho de 2012, no evento de celebração do 20º aniversário de Sailor Moon, Naoko Takeuchi, Kodansha e o grupo Momoiro Clover Z anunciaram que uma nova adaptação em anime estava sendo produzida e estava programada para começar a ser transmitida no verão de 2013, em um lançamento mundial simultâneo, Sailor Moon Crystal, como foi chamado, segue a história do mangá tão fielmente quanto possível, com cada episódio correspondendo a um capítulo publicado. Enquanto Kotono Mitsuishi reprisa seu papel como Usagi Tsukino, um novo elenco de atrizes de voz foram escolhidas para as quatro Sailor Senshi. A dubladora da Ami Mizuno é Hisako Kanemoto, Rei Hino é dublada por Rina Sato, Makoto Kino por Ami Koshimizu e Minako Aino é dublada por Shizuka Ito.Em 30 de abril, foi revelado que o novo anime teria 26 episódios.O primeiro trailer foi divulgado no dia 5 de junho de 2014, revelando que Ryō Hirohashi dublaria a gata Luna e Kenji Nojima, Tuxedo Mask.</p>
+            <p class="text">Em 6 de julho de 2012, no evento de celebração do 20º aniversário de Sailor Moon, Naoko Takeuchi, Kodansha e o grupo Momoiro Clover Z anunciaram que uma nova adaptação em anime estava sendo produzida e estava programada para começar a ser transmitida no verão de 2013, em um lançamento mundial simultâneo, Sailor Moon Crystal, como foi chamado, segue a história do mangá tão fielmente quanto possível, com cada episódio correspondendo a um capítulo publicado.</p>
+            <p class="text">Enquanto Kotono Mitsuishi reprisa seu papel como Usagi Tsukino, um novo elenco de atrizes de voz foram escolhidas para as quatro Sailor Senshi. A dubladora da Ami Mizuno é Hisako Kanemoto, Rei Hino é dublada por Rina Sato, Makoto Kino por Ami Koshimizu e Minako Aino é dublada por Shizuka Ito.Em 30 de abril, foi revelado que o novo anime teria 26 episódios.O primeiro trailer foi divulgado no dia 5 de junho de 2014, revelando que Ryō Hirohashi dublaria a gata Luna e Kenji Nojima, Tuxedo Mask.</p>
                 <picture class="image">
                     <source media="(max-width:800px )" srcset="../imagens/secundaria-300.jpg">
                     <source media="(max-width: 1000px)" srcset="../imagens/secundaria-600.jpg">
@@ -57,29 +59,29 @@
             </div>
             <p class="text">Começando pelo motivo de conseguirem se comunicar como seres humanos. Isso porque ambos são alienígenas do Planeta Mau (“Mau” significa “Gato” na língua egípcia antiga). Embora o lugar não tenha sido mostrado no mangá ou anime, supõe-se que ele é habitado por “Pessoas Gato”, uma vez que ambos os personagens podem tomar uma forma humanoide, ainda que isso não seja algo muito frequente na animação.</p>
             <iframe width="560" height="315" src="https://www.youtube.com/embed/WL3Xzk_bgvE?si=c_wLJsp41UfD1l-9" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-                <h2>Deseja ver mais?</h2>
+                <div id="list-container">
+                <h2 id="list-title">Deseja ver mais?</h2>
                 <p class="text">Saiba mais sobre as histórias individuais das Sailors.</p>
-
-                <ul>
-                    <li>1.1 <abbr title="Sailor Moon">Serena Tsukino</abbr>
-                    <li>1.2 <abbr title="Sailor Mercury">Ami Mizuno</abbr>
-                    <li>1.3 <abbr title="Sailor Mars">Rei Hino</abbr>
-                    <li>1.4 <abbr title="Sailor Júpiter">Lita Kino</abbr>
-                    <li>1.5 <abbr title="Sailor Venus">Mina Aino</abbr>
-                    <li>1.6 <abbr title="Sailor Pluto">Setsuna Meiou</abbr>
+                <ol class="article-list1" id="list">
+                    <li>1.0 <abbr title="Sailor Moon">Serena Tsukino</abbr>
+                    <li>1.1 <abbr title="Sailor Mercury">Ami Mizuno</abbr>
+                    <li>1.2 <abbr title="Sailor Mars">Rei Hino</abbr>
+                    <li>1.3 <abbr title="Sailor Jú piter">Lita Kino</abbr>
+                    <li>1.4 <abbr title="Sailor Venus">Mina Aino</abbr>
+                    </ol>
+                <ol class="article-list1">
+                    <li>1.5 <abbr title="Sailor Neptune">Michiru Kaiou</abbr>
+                    <li>1.6 <abbr title="Sailor Uranus">Haruka Tenou</abbr>
+                    <li>1.7 <abbr title="Sailor Saturn">Hotaru Tomoe</abbr>
+                    <li>1.8 <abbr title="Gata da Sailor">Lua</abbr>
+                    <li>1.9 <abbr title="Gato da Sailor">Artemis</abbr>
+                    </ol>
+                <ul id="article-list2">
+                    <p class="text" id="list-text">Ver mais: </p>
+                     <li><a href="https://pt.wikipedia.org/wiki/Lista_de_episódios_de_Sailor_Moon" target="_blank" class="article-links">Lista de episódios Sailor Moon.</a>
+                    <li><a href="https://pt.wikipedia.org/wiki/Lista_de_episódios_de_Sailor_Moon_Crystal" target="_blank" class="article-links">Lista de episódios Sailor Moon Crystal.</a>
                 </ul>
-                <ul>
-                    <li>1.7 <abbr title="Sailor Neptune">Michiru Kaiou</abbr>
-                    <li>1.8 <abbr title="Sailor Uranus">Haruka Tenou</abbr>
-                    <li>1.9 <abbr title="Sailor Saturn">Hotaru Tomoe</abbr>
-                    <li>2.1 <abbr title="Gata da Sailor">Lua</abbr>
-                    <li>2.2 <abbr title="Gato da Sailor">Artemis</abbr>
-                </ul>
-                <p class="text">Ver também</p>
-                <ul>
-                    <li><a href="https://pt.wikipedia.org/wiki/Lista_de_episódios_de_Sailor_Moon" target="_blank">Lista de episódios Sailor Moon.</a>
-                    <li><a href="https://pt.wikipedia.org/wiki/Lista_de_episódios_de_Sailor_Moon_Crystal" target="_blank">Lista de episódios Sailor Moon Crystal.</a>
-                </ul>
+                </div>
         </article>
     </main>
     <footer id="footer">
