--- a/secundaria/curiosidades.html
+++ b/secundaria/curiosidades.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="../imagens/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="../components/imagens/favicon.ico" type="image/x-icon">
     <title>Curiosidades</title>
 </head>
 <body>
@@ -12,7 +12,7 @@
         <p id="error">404 error</p>
         <h1 id="title">PÁGINA EM <br>MANUTENÇÃO...</h1>
         <picture id="image">
-            <img src="../imagens/sailor-moon-loading.gif" alt="sailors correndo" id="loading-gif">
+            <img src="../components/imagens/sailor-moon-loading.gif" alt="sailors correndo" id="loading-gif">
         </picture>
         <p id="text">Estamos trabalhando nisso, <br>voltaremos em breve.</p>
         <button id="button"><a href="../principal/index.html" id="button-text">Voltar a página principal.</a></button>
