--- a/principal/index.html
+++ b/principal/index.html
@@ -58,7 +58,9 @@
                 </picture>
             </div>
             <p class="text">Começando pelo motivo de conseguirem se comunicar como seres humanos. Isso porque ambos são alienígenas do Planeta Mau (“Mau” significa “Gato” na língua egípcia antiga). Embora o lugar não tenha sido mostrado no mangá ou anime, supõe-se que ele é habitado por “Pessoas Gato”, uma vez que ambos os personagens podem tomar uma forma humanoide, ainda que isso não seja algo muito frequente na animação.</p>
+            <div id="video-container">
             <iframe width="560" height="315" src="https://www.youtube.com/embed/WL3Xzk_bgvE?si=c_wLJsp41UfD1l-9" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen id="video"></iframe>
+            </div>
                 <div id="list-container">
                 <h2 id="list-title">Deseja ver mais?</h2>
                 <p class="text">Saiba mais sobre as histórias individuais das Sailors.</p>
